--- a/content/blog/2019-01-26-xPoints.Rmd
+++ b/content/blog/2019-01-26-xPoints.Rmd
@@ -7,16 +7,26 @@ tags: ["football", "fpl"]
 draft: yes
 ---
 
-To anyone paying attention over the last couple of years, some "advanced" football metrics (or expected goals, at least) seem to have successfully navigated the five stages of grief within the media charged with upholding the "magic" of the game. Imagine peak Lawrenson and Hansen in this scene:
+To anyone paying attention over the last couple of years, some "advanced" football metrics (or expected goals, at least) seem to have successfully navigated the five stages of ~~grief~~ haranguing from the media charged with upholding the "magic" of the game. Imagine peak Lawrenson and Hansen placed in this scene:
 
 <blockquote class="twitter-tweet" data-lang="en-gb"><p lang="en" dir="ltr">The stats don&#39;t look great but <a href="https://twitter.com/jjenas8?ref_src=twsrc%5Etfw">@jjenas8</a> says Brighton will be fine. <a href="https://twitter.com/hashtag/motd2?src=hash&amp;ref_src=twsrc%5Etfw">#motd2</a> <a href="https://t.co/JrXglJEy96">pic.twitter.com/JrXglJEy96</a></p>&mdash; Match of the Day (@BBCMOTD) <a href="https://twitter.com/BBCMOTD/status/1094731648178913280?ref_src=twsrc%5Etfw">10 February 2019</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-Back in August 2017, StatsBomb's Ted Knutson [predicted](https://statsbomb.com/2017/08/xg-is-on-tv-now-what/), among other things, that the xG circus would:
+Back in August 2017, StatsBomb's Ted Knutson [predicted](https://statsbomb.com/2017/08/xg-is-on-tv-now-what/), among other things, that the relentless xG circus would:
 
 > Create an entire new generation of highly educated fans and coaches who view the game itself in a more knowledgeable light.
 
-[Fantasy Premier League](https://fantasy.premierleague.com/) (FPL) is the official fantasy football game of the [Premier League](https://en.wikipedia.org/wiki/Premier_League), with more than five million players (plus many thousands of passive agressive workplace league rivalries) and counting. FPL players, particularly those taking it seriously/semi-seriously, probably represent an early adopter population in Ted's above prophecy - fans with a vested interest in gaining competitive advantage. It definitely shows...Michael Caley [chatting to the FML FPL podcast](http://fmlfpl.libsyn.com/ep-161-fireside-chat-with-michael-caley) recently, for one.
+[Fantasy Premier League](https://fantasy.premierleague.com/) (FPL) is the official fantasy football game of the [Premier League](https://en.wikipedia.org/wiki/Premier_League), with more than five million "managers" (plus many thousands of passive agressive workplace league rivalries) and counting. FPL managers, particularly those taking it seriously/semi-seriously, probably represent an early adopter population in Ted's above prophecy - fans with a vested interest in gaining competitive advantage. It definitely shows...Michael Caley [chatting to the FML FPL podcast](http://fmlfpl.libsyn.com/ep-161-fireside-chat-with-michael-caley) recently, for one.
 
-## 
+I think there's some appetite around for this stuff. What's also interesting to me is that, as an application of metrics like expected goals (xG), fantasy football player evaluation is a far simpler optimisation problem than the real thing. Especially for attacking players, FPL player evaluation is predominantly about *individual goal contributions* (goals and assists) because they result in *points* (three for an assist, while grabbing a goal equals four or five points for midfielders and forwards respectively). Other contributions to general play can be glossed over for the most part, even the "pre-assist", hence why the original FPL valuation for N'Golo Kanté (£5.0m) was so much lower than Sadio Mané's (£9.5m) in the current (2018/19) season.
+
+Therefore, a useful FPL evaluation of attacking players could be made using metrics that quantify activity at the very sharp end of attacking moves, namely a combination of:
+
+- **xG:** How many goals should a player have scored on average, given the shots they took?
+- **xA:** How many assists should a player have provided on average, given the passes they made?
+
+These can subsequently be combined to form an **expected goals contributions** measure, and thus a shorthand for understanding which attacking FPL assets to consider. So, what's the hold-up?
+
+## Speaking different languages
+
 
